--- a/package.json
+++ b/package.json
@@ -8,24 +8,21 @@
     "compile": "tsc",
     "//": "REDIS_ENDPOINT and ELECTRON_BUILD_SERVICE_PORT (443 by default, so, on a local machine set to 8443) envs are required",
     "start": "yarn compile && node out/main.js",
-    "docker-image": "docker build -t electronuserland/build-server .",
-    "aci-image": "docker2aci docker://electronuserland/build-server",
-    "start-docker": "docker run -p 8443:443 --rm electronuserland/build-server",
+    "docker-build": "docker build -t electronuserland/build-server .",
+    "docker-push": "docker push electronuserland/build-server",
+    "start-docker": "docker run --mount type=tmpfs,destination=/tmp/ram -e ELECTRON_BUILDER_TMP_DIR=/tmp/ram -e REDIS_ENDPOINT -e DEBUG -p 8443:443 --rm electronuserland/build-server",
     "///": "https://github.com/hashicorp/packer/issues/4587#issuecomment-282916068",
-    "prepare-pack-app": "git archive master -o /tmp/app.tar.gz",
-    "image": "yarn prepare-pack-app && ./scripts/private/build-do-image.sh",
-    "push-docker": "docker push electronuserland/build-server"
+    "image": "./scripts/private/build-do-image.sh"
   },
   "dependencies": {
     "async-exit-hook": "^2.0.1",
-    "builder-util": "^3.2.2",
+    "builder-util": "^3.4.0",
     "bull": "^3.3.6",
-    "electron-builder": "19.45.6",
+    "electron-builder-lib": "19.46.1",
     "fs-extra-p": "^4.4.4"
   },
   "devDependencies": {
-    "@types/bull": "^3.0.2",
-    "@types/node": "^8.0.51",
+    "@types/node": "^8.0.53",
     "electron-builder-tslint-config": "^1.1.0",
     "tslint": "^5.8.0",
     "typescript": "^2.6.1"
