--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "builder-util": "^3.4.0",
     "bull": "^3.3.6",
     "electron-builder-lib": "19.46.1",
-    "fs-extra-p": "^4.4.4"
+    "fs-extra-p": "^4.4.4",
+    "network-address": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^8.0.53",
