--- a/packages/tsconfig-base.json
+++ b/packages/tsconfig-base.json
@@ -1,21 +1,23 @@
 {
   "compilerOptions": {
     "target": "es2017",
-    "module": "commonjs",
+    "module": "esnext",
     "moduleResolution": "node",
+
     "strict": true,
     "noUnusedLocals": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
+
     "inlineSources": true,
     "sourceMap": true,
+
     "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+
     "newLine": "lf",
-    "skipLibCheck": true,
+
     "noEmitOnError": true,
-    "outDir": "out"
-  },
-  "include": [
-    "src/**/*.ts"
-  ]
+    "declaration": true
+  }
 }
