--- a/packages/electron-build-server/package.json
+++ b/packages/electron-build-server/package.json
@@ -7,12 +7,13 @@
   "license": "MIT",
   "dependencies": {
     "async-exit-hook": "^2.0.1",
-    "builder-util": "^3.4.0",
+    "builder-util": "^3.4.2",
     "bull": "^3.3.6",
-    "electron-builder-lib": "19.46.3",
+    "electron-builder-lib": "19.46.5",
     "fs-extra-p": "^4.4.4",
     "service-registry-redis": "0.0.1",
-    "ioredis": "^3.2.1"
+    "ioredis": "^3.2.1",
+    "nanoid": "^1.0.1"
   },
   "typings": "./out/main.d.ts"
 }
