--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -80,8 +80,8 @@ http {
     ssl_prefer_server_ciphers on;
 
     # cat node.crt ca.crt > bundle.crt
-    ssl_certificate /certs/bundle.crt;
-    ssl_certificate_key /certs/node.key;
+    ssl_certificate /run/secrets/bundle.crt;
+    ssl_certificate_key /run/secrets/node.key;
 
     location = /v1/upload {
       # limit only upload, to be sure that if client started to build, requests to status and download will be not blocked
@@ -127,7 +127,7 @@ http {
     location @deleteDownloaded {
       internal;
       proxy_set_header X-File $uri;
-      proxy_pass http://docker.for.mac.localhost:8081/downloaded?file=$uri;
+      proxy_pass http://builder_upstream/downloaded?file=$uri;
     }
   }
 }
