--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,3 +5,7 @@ services:
     ports:
       # dev nodejs (outside of docker network) should be able to connect to nginx (publish events)
       - 8001:8001
+    volumes:
+      - ./certs:/run/secrets:ro
+      - ./nginx-conf/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx-conf/upstream.${NGINX_ENV:-dev}.conf:/etc/nginx/upstream.conf:ro
