--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -91,7 +91,7 @@ http {
         deny all;
       }
 
-      client_body_temp_path /uploaded-projects;
+      client_body_temp_path /stage;
       client_body_in_file_only on;
       client_max_body_size 512M;
 
@@ -119,8 +119,8 @@ http {
         deny all;
       }
 
-      rewrite ^/v1/download/([^/]+)/(.+)$ /$1/dist/$2 break;
-      root /builder-tmp;
+      rewrite ^/v1/download/(.+)$ /$1 break;
+      root /stage;
       post_action @deleteDownloaded;
     }
 
