--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start-docker": "docker run --mount type=tmpfs,destination=/tmp/ram -e ELECTRON_BUILDER_TMP_DIR=/tmp/ram -e REDIS_ENDPOINT -e DEBUG -p 8443:443 --rm electronuserland/build-server",
     "///": "https://github.com/hashicorp/packer/issues/4587#issuecomment-282916068",
     "image": "./scripts/private/build-do-image.sh",
-    "up": "docker-compose up --abort-on-container-exit"
+    "up": "docker-compose up --abort-on-container-exit",
+    "up-prod": "ENV_COLOR=green LOGGING_DRIVER=json-file docker-compose -f docker-compose.yml -f docker-compose.prod.yml -f docker-compose.local-prod.yml up --abort-on-container-exit"
   },
   "workspaces": [
     "packages/*"
