--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -1,11 +1,14 @@
+# https://stackoverflow.com/questions/32845674/setup-nginx-not-to-crash-if-host-in-upstream-is-not-found
+# that's why we use var $upstream_host
+
 user nginx;
-worker_processes 1;
+worker_processes auto;
 
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
 
 events {
-  worker_connections  1024;
+  worker_connections 1024;
 }
 
 http {
@@ -22,8 +25,6 @@ http {
   tcp_nopush on;
   tcp_nodelay on;
 
-  include /etc/nginx/upstream.conf;
-
   # "burst nodelay" is used because client does 2 requests (post upload and get status immediatly after upload)
   # 16 is used because one ip can be used for several clients (belarus, company nat) but in general should be 4.
   limit_req_zone $binary_remote_addr zone=build:10m rate=16r/m;
@@ -32,7 +33,7 @@ http {
   limit_req_zone $binary_remote_addr zone=status:10m rate=16r/m;
 
   # default 30m but in our case message should be consumed very quickly (no need to queue in general)
-  push_stream_message_ttl 30s;
+  push_stream_message_ttl 3m;
   # default  30s but in our case we post events only on start and on end and build time maybe several minutes
   push_stream_channel_inactivity_time 15m;
   push_stream_shared_memory_size 10m;
@@ -67,6 +68,8 @@ http {
     }
   }
 
+  # https://stackoverflow.com/a/37656784/1910191
+  resolver 127.0.0.11 ipv6=off;
   proxy_http_version 1.1;
   proxy_set_header Connection "";
 
@@ -83,6 +86,8 @@ http {
     ssl_certificate /run/secrets/bundle.crt;
     ssl_certificate_key /run/secrets/node.key;
 
+    include /etc/nginx/proxy.conf;
+
     location = /v1/upload {
       # limit only upload, to be sure that if client started to build, requests to status and download will be not blocked
       limit_req zone=build burst=8;
@@ -98,7 +103,7 @@ http {
       proxy_set_header X-File $request_body_file;
       proxy_pass_request_body off;
 
-      proxy_pass http://builder_upstream;
+      proxy_pass http://$upstream_host;
     }
 
     location ~ /v1/status/(.*) {
@@ -107,6 +112,7 @@ http {
 
       # activate subscriber (streaming) mode for this location
       push_stream_subscriber;
+      push_stream_subscriber_connection_ttl 60m;
       push_stream_ping_message_interval 15s;
       push_stream_authorized_channels_only on;
 
@@ -127,7 +133,7 @@ http {
     location @deleteDownloaded {
       internal;
       proxy_set_header X-File $uri;
-      proxy_pass http://builder_upstream/downloaded?file=$uri;
+      proxy_pass http://$upstream_host/downloaded?file=$uri;
     }
   }
 }
