--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,12 +1,12 @@
 version: "3.4"
 services:
   nginx:
-    command: [nginx-debug, "-g", "daemon off;"]
+    environment:
+      - UPSTREAM_HOST=docker.for.mac.localhost:8081
     ports:
       # dev nodejs (outside of docker network) should be able to connect to nginx (publish events)
       - 8001:8001
     volumes:
       - ./certs:/run/secrets:ro
       - ./nginx-conf/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx-conf/upstream.${NGINX_ENV:-dev}.conf:/etc/nginx/upstream.conf:ro
       - ${DATA_ROOT_DIR:-/Volumes/test}/stage:/stage:delegated
