--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: "3.4"
 services:
   nginx:
-    image: develar/nginx-pushstream:latest
+    image: develar/nginx-pushstream
+    environment:
+      - UPSTREAM_HOST=builder:80
     ports:
       - target: 443
         # will be replaced to 443 for production by script due to https://github.com/moby/moby/issues/35532#issuecomment-346753307
