feat(router): use unix socket for backend communication

--- a/packages/router/nginx.conf
+++ b/packages/router/nginx.conf
@@ -18,11 +18,9 @@ http {
 
   access_log /var/log/nginx/access.log main;
 
-  limit_req_zone $binary_remote_addr zone=build:10m rate=64r/m;
+  limit_req_zone $binary_remote_addr zone=router:10m rate=64r/m;
   limit_req_status 429;
 
-  # https://stackoverflow.com/a/37656784/1910191
-  resolver 127.0.0.11 ipv6=off;
   proxy_http_version 1.1;
   proxy_set_header Connection "";
 
@@ -30,21 +28,27 @@ http {
     listen 443 ssl http2;
 
     ssl_protocols TLSv1.2;
+    ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256';
     ssl_prefer_server_ciphers on;
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;
+    add_header Strict-Transport-Security max-age=15768000;
 
-    # cat node.crt ca.crt > bundle.crt
     ssl_certificate /run/secrets/bundle.crt;
     ssl_certificate_key /run/secrets/node.key;
 
+    location = / {
+      return 301 https://github.com/develar/electron-build-service;
+    }
+
     location /find-build-agent {
-      # limit only upload, to be sure that if client started to build, requests to status and download will be not blocked
-      limit_req zone=build burst=32;
+      limit_req zone=router burst=32;
 
       limit_except GET {
         deny all;
       }
 
-      proxy_pass http://router:80;
+      proxy_pass http://unix:/socket/router.socket;
     }
   }
 }
