--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "yarn compile && node out/main.js",
     "build": "docker build -t electronuserland/build-server -f packages/electron-build-server/Dockerfile . ",
     "build-router": "docker build -t electronuserland/build-server-router -f packages/router/Dockerfile . ",
-    "bundle": "./scripts/private/build-bundle.sh",
+    "bundle": "./scripts/build-bundle.sh",
     "push": "docker push electronuserland/build-server",
     "push-router": "docker push electronuserland/build-server-router",
     "start-docker": "docker run --mount type=tmpfs,destination=/tmp/ram -e ELECTRON_BUILDER_TMP_DIR=/tmp/ram -e REDIS_ENDPOINT -e DEBUG -p 8443:443 --rm electronuserland/build-server",
