--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -39,14 +39,9 @@ http {
   push_stream_shared_memory_size 10m;
 
   server {
-    listen 8001;
+    listen unix:/socket/nginx.socket;
 
     location /publish-build-event {
-      allow 192.168.0.0/16;
-      allow 172.16.0.0/12;
-      allow 10.0.0.0/8;
-      deny all;
-
       push_stream_store_messages on;
 
       # activate publisher (admin) mode for this location
@@ -57,9 +52,6 @@ http {
     }
 
     location /channels-stats {
-      allow 192.168.0.0/16;
-      deny all;
-
       # activate channels statistics mode for this location
       push_stream_channels_statistics;
 
@@ -80,7 +72,11 @@ http {
     http2_max_requests 12;
 
     ssl_protocols TLSv1.2;
+    ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256';
     ssl_prefer_server_ciphers on;
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;
+    add_header Strict-Transport-Security max-age=15768000;
 
     # cat node.crt ca.crt > bundle.crt
     ssl_certificate /run/secrets/bundle.crt;
