fix(builder): fix delete downloaded file

--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -128,8 +128,8 @@ http {
 
     location @deleteDownloaded {
       internal;
-      proxy_set_header X-File $uri;
-      proxy_pass http://$upstream_host/downloaded?file=$uri;
+      proxy_set_header x-file-downloaded $uri;
+      proxy_pass http://$upstream_host;
     }
   }
 }
