allow multi-part download (so, latency doesn't affect download speed anymore)

--- a/docker-compose.local-prod.yml
+++ b/docker-compose.local-prod.yml
@@ -1,6 +1,13 @@
 version: "3.4"
 services:
+  builder:
+    logging:
+      driver: json-file
+      options: {}
   nginx:
+    logging:
+      driver: json-file
+      options: {}
     volumes:
       - ./certs:/run/secrets:ro
       - ./nginx-conf/nginx.conf:/etc/nginx/nginx.conf:ro
