--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -8,7 +8,7 @@ error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
 
 events {
-  worker_connections 1024;
+  worker_connections 2048;
 }
 
 http {
@@ -30,7 +30,7 @@ http {
   limit_req_zone $binary_remote_addr zone=build:10m rate=16r/m;
   limit_req_status 429;
 
-  limit_req_zone $binary_remote_addr zone=status:10m rate=16r/m;
+  limit_req_zone $binary_remote_addr zone=status:10m rate=32r/m;
 
   # default 30m but in our case message should be consumed very quickly (no need to queue in general)
   push_stream_message_ttl 3m;
@@ -96,7 +96,7 @@ http {
       client_body_in_file_only on;
       client_max_body_size 512M;
 
-      proxy_set_header X-File $request_body_file;
+      proxy_set_header x-file $request_body_file;
       proxy_pass_request_body off;
 
       proxy_pass http://$upstream_host;
@@ -116,6 +116,17 @@ http {
       push_stream_channels_path $1;
     }
 
+    location ~ /v1/complete/(.*) {
+      limit_req zone=status burst=8;
+
+      limit_except GET {
+        deny all;
+      }
+
+      proxy_set_header x-id $1;
+      proxy_pass http://$upstream_host;
+    }
+
     location /v1/download/ {
       limit_except GET {
         deny all;
@@ -123,13 +134,6 @@ http {
 
       rewrite ^/v1/download/(.+)$ /$1 break;
       root /stage;
-      post_action @deleteDownloaded;
-    }
-
-    location @deleteDownloaded {
-      internal;
-      proxy_set_header x-file-downloaded $uri;
-      proxy_pass http://$upstream_host;
     }
   }
 }
