--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -76,6 +76,7 @@ http {
     ssl_prefer_server_ciphers on;
     ssl_session_timeout 1d;
     ssl_session_cache shared:SSL:50m;
+    ssl_session_tickets off;
     add_header Strict-Transport-Security max-age=15768000;
 
     # cat node.crt ca.crt > bundle.crt
