chore: update electron-builder to 19.52.0

--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -85,6 +85,10 @@ http {
 
     include /etc/nginx/proxy.conf;
 
+    location = / {
+      return 301 https://github.com/electron-userland/electron-build-service;
+    }
+
     location = /v1/upload {
       # limit only upload, to be sure that if client started to build, requests to status and download will be not blocked
       limit_req zone=build burst=8;
