--- a/packages/electron-build-server/Dockerfile
+++ b/packages/electron-build-server/Dockerfile
@@ -29,20 +29,15 @@ ENV LANG C.UTF-8
 ENV LANGUAGE C.UTF-8
 ENV LC_ALL C.UTF-8
 
-# do not clean apt lists because snap uses apt to install packages
 RUN apt-get -qq update && \
   apt-get -qq dist-upgrade && \
-  apt-get -qq --no-install-recommends install unzip snapcraft icnsutils rpm git && \
+  apt-get -qq --no-install-recommends install unzip snapcraft rpm git && \
   curl -L https://nodejs.org/dist/v$NODE_VERSION/node-v$NODE_VERSION-linux-x64.tar.gz | tar xz -C /usr/local --strip-components=1 && \
   unlink /usr/local/CHANGELOG.md && unlink /usr/local/LICENSE && unlink /usr/local/README.md && \
   curl -L https://yarnpkg.com/latest.tar.gz | tar xz -C /usr/local --strip-components=1 && \
-  curl -L https://github.com/electron-userland/electron-builder-binaries/releases/download/zstd-1.3.3/zstd-linux-x64 --output /usr/local/bin/zstd && chmod +x /usr/local/bin/zstd && \
+  curl -L https://github.com/electron-userland/electron-builder-binaries/releases/download/zstd-linux-1.3.4/zstd --output /usr/local/bin/zstd && chmod +x /usr/local/bin/zstd && \
   apt-get -qq autoremove && \
-  apt-get -qq clean
-
-# snapcraft install a lot of packages to build, so, to avoid it in each build agent, build sample snap to fetch all required depenencies in advance
-COPY scripts/snapcraft.yaml /tmp/snap-project/snap/snapcraft.yaml
-RUN cd /tmp/snap-project && snapcraft snap && rm -rf /tmp/snap-project
+  apt-get -qq clean && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
